BM-17251 Fix: calendar popup detail, participation buttons alignment

--- a/ui/closures/net.bluemind.calendar.application.closure/src/main/css/calendar.css
+++ b/ui/closures/net.bluemind.calendar.application.closure/src/main/css/calendar.css
@@ -895,6 +895,11 @@ div.column-emul {
   cursor: pointer;
 }
 
+.eb-partitipcation-buttons {
+    padding: 4px 8px;
+    text-align: center;
+}
+
 .eb-buttons {
   padding: 4px 8px;
   background-color: #fff;
